# alseid

./: .gitmodules  Doxyfile  LICENSE  NOTICE  README.md  meson.build  meson_options.txt
demos/: meson.build
demos/01-initialization/: main.cpp  meson.build
demos/02-cube/: main.cpp  meson.build
demos/02-cube/resources/: resources.json
demos/02-cube/shaders/: cs_present.comp  fs_cube.frag  vs_cube.vert
demos/03-raytracing/: main.cpp  meson.build
demos/03-raytracing/shaders/: cs_rt.comp
demos/04-meshlet/: README.md  main.cpp  meson.build
demos/04-meshlet/resources/: resources.json
demos/04-meshlet/shaders/: animate.glsl  material.glsl  object.glsl  pass.glsl  present.comp  render.task  task.glsl  transform.glsl
src/: meson.build
src/alloc/: alloc_bucket.h  alloc_chunk.h  alloc_linear.h
src/gfx/: gfx.cpp  gfx.h  gfx_adapter.h  gfx_backend.h  gfx_buffer.cpp  gfx_buffer.h  gfx_buffer_pool.cpp  gfx_buffer_pool.h  gfx_command_list.h  gfx_context.h  gfx_context_locked.h  gfx_descriptor_array.h  gfx_descriptor_handle.h  gfx_device.h  gfx_format.cpp  gfx_format.h  gfx_geometry.cpp  gfx_geometry.h  gfx_image.cpp  gfx_image.h  gfx_memory.h  gfx_pipeline.cpp  gfx_pipeline.h  gfx_presenter.cpp  gfx_presenter.h  gfx_ray_tracing.h  gfx_render.h  gfx_sampler.h  gfx_scratch.cpp  gfx_scratch.h  gfx_semaphore.h  gfx_shader.cpp  gfx_shader.h  gfx_spirv.cpp  gfx_spirv.h  gfx_spirv_opt.cpp  gfx_spirv_opt.h  gfx_submission.cpp  gfx_submission.h  gfx_transfer.cpp  (+3 more)
src/gfx/asset/: gfx_asset.cpp  gfx_asset.h  gfx_asset_archive.cpp  gfx_asset_archive.h  gfx_asset_descriptor.cpp  gfx_asset_descriptor.h  gfx_asset_group.h  gfx_asset_manager.cpp  gfx_asset_manager.h  gfx_asset_pipelines.cpp  gfx_asset_pipelines.h  gfx_asset_sampler.cpp  gfx_asset_sampler.h  gfx_asset_static.cpp  gfx_asset_static.h
src/gfx/common/: gfx_common_hiz.cpp  gfx_common_hiz.h  gfx_common_pipelines.cpp  gfx_common_pipelines.h
src/gfx/debug/: gfx_debug_device.cpp  gfx_debug_device.h
src/gfx/scene/: gfx_scene_common.h  gfx_scene_draw.cpp  gfx_scene_draw.h  gfx_scene_instance.cpp  gfx_scene_instance.h  gfx_scene_material.cpp  gfx_scene_material.h  gfx_scene_node.cpp  gfx_scene_node.h  gfx_scene_pass.cpp  gfx_scene_pass.h  gfx_scene_pipelines.cpp  gfx_scene_pipelines.h
src/gfx/shaders/: as_animation.glsl  as_common.glsl  as_draw.glsl  as_geometry.glsl  as_include_head.glsl  as_include_tail.glsl  as_matrix.glsl  as_pass.glsl  as_quaternion.glsl  as_scene.glsl  as_stream.glsl  cs_joint_animation.glsl  cs_joint_transform.glsl  cs_template.glsl  fs_template.glsl  meson.build  ms_common.glsl  ms_template.glsl  ts_common.glsl  ts_template.glsl  vs_template.glsl
src/gfx/shaders/asset/: as_asset_group.glsl  cs_asset_group_update.comp
src/gfx/shaders/common/: cs_common_hiz.comp
src/gfx/shaders/render/: ms_render_common.glsl  ms_render_instance.glsl  ts_render_common.glsl  ts_render_instance.glsl  ts_render_payload.glsl
src/gfx/shaders/scene/: as_pass.glsl  as_scene.glsl  as_scene_draw.glsl  as_scene_instance.glsl  as_scene_node_transform.glsl  as_scene_stream.glsl  cs_draw_list_generate.comp  cs_draw_list_init.comp  cs_instance_animate.comp  cs_instance_animate_prepare.comp  cs_instance_update_execute.comp  cs_instance_update_node.comp  cs_instance_update_prepare.comp  cs_pass_info_update_copy.comp  cs_pass_info_update_execute.comp  cs_pass_info_update_init.comp  cs_pass_info_update_prepare.comp  cs_pass_init.comp  cs_pass_reset_update.comp  cs_pass_traverse_bvh.comp  cs_pass_traverse_reset.comp  cs_scene_update.comp  cs_scene_upload.comp
src/gfx/vulkan/: gfx_vulkan.cpp  gfx_vulkan.h  gfx_vulkan_adapter.cpp  gfx_vulkan_adapter.h  gfx_vulkan_barrier.cpp  gfx_vulkan_barrier.h  gfx_vulkan_buffer.cpp  gfx_vulkan_buffer.h  gfx_vulkan_command_list.cpp  gfx_vulkan_command_list.h  gfx_vulkan_context.cpp  gfx_vulkan_context.h  gfx_vulkan_descriptor_array.cpp  gfx_vulkan_descriptor_array.h  gfx_vulkan_descriptor_handle.h  gfx_vulkan_descriptor_pool.cpp  gfx_vulkan_descriptor_pool.h  gfx_vulkan_device.cpp  gfx_vulkan_device.h  gfx_vulkan_format.cpp  gfx_vulkan_format.h  gfx_vulkan_gdeflate.cpp  gfx_vulkan_gdeflate.h  gfx_vulkan_image.cpp  gfx_vulkan_image.h  gfx_vulkan_include.h  gfx_vulkan_loader.cpp  gfx_vulkan_loader.h  gfx_vulkan_memory.cpp  gfx_vulkan_memory.h  gfx_vulkan_pipeline.cpp  gfx_vulkan_pipeline.h  gfx_vulkan_presenter.cpp  gfx_vulkan_presenter.h  gfx_vulkan_queue.cpp  gfx_vulkan_queue.h  gfx_vulkan_ray_tracing.cpp  gfx_vulkan_ray_tracing.h  gfx_vulkan_sampler.cpp  gfx_vulkan_sampler.h  (+5 more)
src/gfx/vulkan/shaders/: cs_gdeflate.comp  cs_present_blit.comp  fs_present_blit.frag  vs_present_blit.vert
src/io/: io.cpp  io.h  io_archive.cpp  io_archive.h  io_file.h  io_request.cpp  io_request.h  io_stream.cpp  io_stream.h
src/io/stl/: io_stl.cpp  io_stl.h  io_stl_file.cpp  io_stl_file.h  io_stl_request.cpp  io_stl_request.h  meson.build
src/io/uring/: io_uring.cpp  io_uring.h  io_uring_file.cpp  io_uring_file.h  io_uring_include.h  io_uring_request.cpp  io_uring_request.h  meson.build
src/job/: job.cpp  job.h
src/jobs/: job.cpp  job.h  job_manager.cpp  job_manager.h
src/util/: util_array.h  util_assert.h  util_bitarray.h  util_bitstream.h  util_buffer.h  util_bytestream.h  util_common.h  util_deflate.cpp  util_deflate.h  util_error.h  util_flags.h  util_handle.h  util_hash.cpp  util_hash.h  util_huff_lzss.cpp  util_huff_lzss.h  util_huffman.cpp  util_huffman.h  util_iface.h  util_likely.h  util_lock_free.h  util_log.cpp  util_log.h  util_lzss.cpp  util_lzss.h  util_math.h  util_matrix.h  util_object_map.h  util_ptr.h  util_quaternion.h  util_small_vector.h  util_stream.cpp  util_stream.h  util_string.h  util_types.h  util_vector.h
src/wsi/: wsi.cpp  wsi.h  wsi_display.h  wsi_event.h  wsi_window.h
src/wsi/sdl2/: meson.build  wsi_sdl2.cpp  wsi_sdl2.h  wsi_sdl2_display.cpp  wsi_sdl2_display.h  wsi_sdl2_include.h  wsi_sdl2_window.cpp  wsi_sdl2_window.h
src/wsi/sdl3/: meson.build  wsi_sdl3.cpp  wsi_sdl3.h  wsi_sdl3_display.cpp  wsi_sdl3_display.h  wsi_sdl3_include.h  wsi_sdl3_window.cpp  wsi_sdl3_window.h
(+84 files in other folders)
