option('enable-sdl2', type: 'boolean', value: true, description: 'Enable SDL2 WSI and audio backends')
option('enable-sdl3', type: 'boolean', value: true, description: 'Enable SDL3 WSI and audio backends')
option('enable-vulkan', type: 'boolean', value: true, description: 'Enable Vulkan graphics backend')
option('enable-liburing', type: 'feature', value: 'auto', description: 'Enable io_uring I/O backend')
